syntax = "proto3";

package channel;

import "google/protobuf/timestamp.proto";

enum ChannelStatus {
  Active = 0;
  Archived = 1;
}

service ChannelService {
  rpc CreateChannel(CreateChannelReq) returns (Channel);
}

message Channel {
  string identifier = 1;
  google.protobuf.Timestamp createdAt = 2;
  int64 maxParticipants = 3;
  ChannelStatus status = 4;
}

message CreateChannelReq {
  string identifier = 1;
  int64 maxParticipants = 3;
}
